[workspace]
members = [
    "crates/mev-share-sse",
    "crates/mev-share-rpc-api",

    # Internal
    "examples"
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/mattsse/mev-share-rs"
repository ="https://github.com/mattsse/mev-share-rs"

[workspace.dependencies]
## eth
ethers-core = { version = "2.0", default-features = false }
ethers-signers = "2.0.7"

## net
http = "0.2.9"
tower = "0.4"
hyper = "0.14"

## async
futures-util = "0.3"

## misc
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }