[workspace]
members = [
    "crates/mev-share-backend",
    "crates/mev-share-sse",
    "crates/mev-share-rpc-api",
    "crates/mev-share",

    # Internal
    "examples",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
rust-version = "1.70"
authors = ["mev-share-rs devs"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/mev-share-rs"
repository = "https://github.com/paradigmxyz/mev-share-rs"

[workspace.dependencies]
## workspace crates
mev-share = { path = "crates/mev-share" }
mev-share-sse = { path = "crates/mev-share-sse" }
mev-share-rpc-api = { path = "crates/mev-share-rpc-api" }

## eth
alloy-primitives = { version = "1.0.0", features = ["serde"] }
alloy-rpc-types-mev = ">= 1.0"
ethers-core = { version = "2.0", default-features = false }
ethers-signers = "2.0"
ethers-providers = "2.0"

## net
http = "0.2.9"
tower = "0.5"
hyper = "0.14"
jsonrpsee = "0.20"

## async
futures-util = "0.3"
tokio = "1"
async-trait = "0.1"

## misc
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
thiserror = "2.0"
