[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
mev-share-sse = { path = "../crates/mev-share-sse" }
mev-share-rpc-api = { path = "../crates/mev-share-rpc-api", features = ["client", "server"] }
mev-share-backend = { path = "../crates/mev-share-backend" }

## async
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
futures-util.workspace = true
jsonrpsee = { workspace = true, features = ["client", "async-client"] }
tower.workspace = true

## eth 
ethers-core.workspace = true
ethers-providers.workspace = true
ethers-signers.workspace = true

## server
hyper = { workspace = true, features = ["full"] }

## misc
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[[example]]
name = "sse"
path = "sse.rs"

[[example]]
name = "sse-server"
path = "sse-server.rs"

[[example]]
name = "rpc-client"
path = "rpc-client.rs"

[[example]]
name = "rpc-sim-service"
path = "rpc-sim-service.rs"