[package]
name = "mev-share-rpc-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
MEV-share RPC API trait definitions
"""

[dependencies]
## eth
ethers-core.workspace = true
ethers-signers.workspace = true

## misc
jsonrpsee = { version = "0.18", features = ["server", "macros"] }
serde.workspace = true
http.workspace = true
hyper = { workspace = true, features = ["stream"] }
tower.workspace = true
futures-util.workspace = true
async-trait.workspace = true


[dev-dependencies]
serde_json.workspace = true
tokio = { version = "1.18", features = ["full"] }


[features]
default = ["client"]
client = ["jsonrpsee/client"]
server = ["jsonrpsee/server"]
