[package]
name = "mev-share-rpc-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
MEV-share RPC API trait definitions
"""

[dependencies]
## eth
alloy-primitives.workspace = true
alloy.workspace = true

## misc
jsonrpsee = { workspace = true, features = ["server", "macros"] }
serde.workspace = true
http.workspace = true
hyper = { workspace = true, features = ["stream"] }
tower.workspace = true
futures-util.workspace = true
async-trait.workspace = true


[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
rand.workspace = true


[features]
default = ["client"]
client = ["jsonrpsee/client"]
server = ["jsonrpsee/server"]
