[package]
name = "mev-share-sse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
MEV-share Server Side Events support in rust
"""

[dependencies]
ethers-core.workspace = true

## async
async-sse = "5.1"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = { workspace = true, features = ["io"] }
http-types = { version = "2.12", default-features = false }
hyper = { workspace = true, features = ["stream"] }
tower.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
tokio-stream = { version = "0.1", features = ["sync"] }

## misc
bytes = "1.4"
pin-project-lite = "0.2"
thiserror = "1.0"
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
