[package]
name = "mev-share-sse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = """
MEV-share Server Side Events support in rust
"""

[dependencies]
alloy-primitives.workspace = true
## async
async-sse = "5.1"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = { workspace = true, features = ["io"] }
http-types = { version = "2.12", default-features = false }
tower = { workspace = true, optional = true }
hyper = { workspace = true, features = ["stream"], optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }

## misc
bytes = "1.4"
pin-project-lite = "0.2"
thiserror = "1.0"
http = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

[features]
server = ["hyper", "http", "tokio-stream", "tokio-util", "tower"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
